--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-share": "^5.2.2",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
